ispCP ω 1.0.0 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 _________________________________________________________________
/ @TODO:                                                          \
|         - GUI:                                                  |
|               * to fix: no errors on adding user (custom HP)    |
\_________________________________________________________________/

2007-10-18 Benedikt Heintel
	- ENGINE:
		* Fixed #795: Domains Status not OK.

2007-10-17 Malte Geierhos
	- SETUP:
		* Fixed #786 (thanks to greg@proxyconcept.net)
		* Fixed #785 (thanks to greg@proxyconcept.net)

2007-10-17 Benedikt Heintel
	- DISTS:
		* Updated fedora
	- SETUP:
		* Fixed #783: added Makefile.gentoo
		* Fixed #784: ispcp-setup fails with compilation errors
		* Fixed #785: bad test into configs/init.d/Makefile
		* Fixed #788: mistakes with the php4-fcgi-starter.tpl
	- TOOLS:
		* Updated PMA to 2.11.1.2 (#789)

2007-10-16 Raphael Geissert
    - ENGINE:
        * Improved entropy pool seeding code
    - SETUP:
        * Fixed #782: cannot stat `./setup/vhcs2ispcp.pl': No such file or directory

2007-10-16 Benedikt Heintel
	- DISTS:
		* Updated ubuntu
	- ENGINE:
		* Fixed #7: Improvement of static AWStats
		* Fixed #7: Removed static dirs from conf filess
		* Fixed #55: Part I: Update Script from VHCS 2.4.7.1 to ispCP ω 1.0.0
		* Fixed #768: perl ispcp-setup - does not work
		* Fixed #779: Makefile Error
		* Fixed #781: htdocs folder is empty (on new installed domain)
		* Deleted: Old SASL vaiables and use of them

2007-10-16 Malte Geierhos
	- DATABASE:
		* Fixed #780: sql error during setup

2007-10-15 Raphael Geissert
    - LANGUAGES:
        * Updated Czech translation (thanks to Josef Pinc)
        * Updated German translation (thanks to the German translation team)
        * Updated the A=B files

2007-10-15 Benedikt Heintel
	- DOCS:
		* Updated: Fedora install script
	- ENGINE: